--- a/Student/index.html
+++ b/Student/index.html
@@ -20,31 +20,43 @@
 
     <div id="container">
         <div class="darkBack">
+            <video autoplay loop muted preload="none">
+                <source src="Innovation.mp4">
+            </video>
             <div id="letsLearn">
-                <h2>Let's learn and build together...</h2>
+                <h2>Let's learn, build and grow together...</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus illum unde vitae tempora, quos vel
                     veniam optio! Eum magni, natus explicabo sint quam modi mollitia accusantium impedit ea doloribus
                     alias!
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum ab officia facilis recusandae
+                    id cum sunt, laborum sapiente explicabo, quis commodi quae odio ducimus nemo deserunt velit
+                    laboriosam voluptatibus itaque.
                 </p>
             </div>
         </div>
 
         <div class="lightBack">
             <div id="sources">
-                <h2>Let's learn and build together...</h2>
+                <h2 style="background-color: #ee999a;">Online resources to learn coding</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus illum unde vitae tempora, quos vel
                     veniam optio! Eum magni, natus explicabo sint quam modi mollitia accusantium impedit ea doloribus
                     alias!
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum ab officia facilis recusandae
+                    id cum sunt, laborum sapiente explicabo, quis commodi quae odio ducimus nemo deserunt velit
+                    laboriosam voluptatibus itaque.
                 </p>
             </div>
         </div>
 
         <div class="darkBack">
             <div id="projects">
-                <h2>Let's learn and build together...</h2>
+                <h2>Here are some of my projects</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus illum unde vitae tempora, quos vel
                     veniam optio! Eum magni, natus explicabo sint quam modi mollitia accusantium impedit ea doloribus
                     alias!
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum ab officia facilis recusandae
+                    id cum sunt, laborum sapiente explicabo, quis commodi quae odio ducimus nemo deserunt velit
+                    laboriosam voluptatibus itaque.
                 </p>
             </div>
         </div>
