--- a/Student/index.html
+++ b/Student/index.html
@@ -34,7 +34,7 @@
 
         <div class="lightBack">
             <div id="sources">
-                <h2 style="background-color: #ee999a;">Online resources to learn coding</h2>
+                <h2 style="background-color: #ee999a;">Some good online resources to learn coding</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus illum unde vitae tempora, quos vel
                     veniam optio! Eum magni, natus explicabo sint quam modi mollitia accusantium impedit ea doloribus
                     alias!
@@ -48,6 +48,19 @@
         <div class="darkBack">
             <div id="projects">
                 <h2>Here are some of my projects</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus illum unde vitae tempora, quos vel
+                    veniam optio! Eum magni, natus explicabo sint quam modi mollitia accusantium impedit ea doloribus
+                    alias!
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum ab officia facilis recusandae
+                    id cum sunt, laborum sapiente explicabo, quis commodi quae odio ducimus nemo deserunt velit
+                    laboriosam voluptatibus itaque.
+                </p>
+            </div>
+        </div>
+
+        <div class="lightBack">
+            <div id="game">
+                <h2 style="background-color: #ee999a;">Check it out : A 2D Game</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus illum unde vitae tempora, quos vel
                     veniam optio! Eum magni, natus explicabo sint quam modi mollitia accusantium impedit ea doloribus
                     alias!
