--- a/Student/index.html
+++ b/Student/index.html
@@ -35,12 +35,19 @@
         <div class="lightBack">
             <div id="sources">
                 <h2 style="background-color: #ee999a;">Some good online resources to learn coding</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus illum unde vitae tempora, quos vel
-                    veniam optio! Eum magni, natus explicabo sint quam modi mollitia accusantium impedit ea doloribus
-                    alias!
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum ab officia facilis recusandae
-                    id cum sunt, laborum sapiente explicabo, quis commodi quae odio ducimus nemo deserunt velit
-                    laboriosam voluptatibus itaque.
+                <p>
+                    YouTube Channels : <br /><br />
+                    1) FreeCodeCamp<br />
+                    2) Programming with Mosh<br />
+                    3) Edureka<br /><br /><br />
+                    Websites : <br /><br />
+                    1) Javatpoint<br />
+                    2) W3Schools<br />
+                    3) GeeksForGeeks<br />
+                    4) Udemy<br />
+                    5) Coursera<br />
+                    6) Great Learning<br />
+                    7) Coding Ninjas
                 </p>
             </div>
         </div>
