--- a/Student/index.html
+++ b/Student/index.html
@@ -9,17 +9,21 @@
 
 <body>
     <button id="home" onclick="window.location.href = '../index.html'" title="Go back to Home Page">↸</button>
-    <h1 id="hello">
-        <div class="hola" id="ex1"><small>¡</small></div>
-        <div class="hola" id="H">H</div>
-        <div class="hola" id="O">O</div>
-        <div class="hola" id="L">L</div>
-        <div class="hola" id="A">A</div>
-        <div class="hola" id="ex2"><small>!</small></div>
-    </h1>
+    <img id="popUp" src="popUp.png">
+    <div id="welcomeMsg">
+        <img id="vector" src="sanjana_vector.png">
+        <h1 id="hello">
+            <div class="hola" id="ex1"><small>¡</small></div>
+            <div class="hola" id="H">H</div>
+            <div class="hola" id="O">O</div>
+            <div class="hola" id="L">L</div>
+            <div class="hola" id="A">A</div>
+            <div class="hola" id="ex2"><small>!</small></div>
+        </h1>
+    </div>
 
     <div id="container">
-        <div class="darkBack">
+        <div class="darkBack" style="padding-top: 12vw;">
             <video autoplay loop muted preload="none">
                 <source src="Innovation.mp4">
             </video>
