--- a/Student/index.html
+++ b/Student/index.html
@@ -8,77 +8,99 @@
 </head>
 
 <body>
-    <button id="home" onclick="window.location.href = '../index.html'" title="Go back to Home Page">↸</button>
-    <img id="popUp" src="popUp.png">
-    <div id="welcomeMsg">
-        <img id="vector" src="sanjana_vector.png">
-        <h1 id="hello">
-            <div class="hola" id="ex1"><small>¡</small></div>
-            <div class="hola" id="H">H</div>
-            <div class="hola" id="O">O</div>
-            <div class="hola" id="L">L</div>
-            <div class="hola" id="A">A</div>
-            <div class="hola" id="ex2"><small>!</small></div>
-        </h1>
+    <div id="showNav">
+        <button id="show">&#8801</button>
+        <ul id="navBar">
+            <li><a href="../index.html" style="background-color : #e0b9ba;">Home</a></li>
+            <li><a href="#about" style="background-color : #e2a7a9;">About Me</a></li>
+            <li><a href="#projects" style="background-color : #e39a9c;">Projects</a></li>
+            <li><a href="#skills" style="background-color : #e78a8e;">Relevant Coursework</a></li>
+            <li><a href="#resume" style="background-color : #e27478;">Resumé</a></li>
+        </ul>
     </div>
 
-    <div id="container">
-        <div class="darkBack" style="padding-top: 12vw;">
-            <video autoplay loop muted preload="none">
-                <source src="Innovation.mp4">
-            </video>
-            <div id="letsLearn">
-                <h2>Let's learn, build and grow together...</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus illum unde vitae tempora, quos vel
-                    veniam optio! Eum magni, natus explicabo sint quam modi mollitia accusantium impedit ea doloribus
-                    alias!
-                </p>
+    <div id="main">
+        <div id="welcome">
+            <img id="popUp" src="popUp.png">
+            <div id="welcomeMsg">
+                <img id="vector" src="sanjana_vector.png">
+                <h1 id="hello">
+                    <div class="hola" id="ex1"><small>¡</small></div>
+                    <div class="hola" id="H">H</div>
+                    <div class="hola" id="O">O</div>
+                    <div class="hola" id="L">L</div>
+                    <div class="hola" id="A">A</div>
+                    <div class="hola" id="ex2"><small>!</small></div>
+                </h1>
             </div>
         </div>
 
-        <div class="lightBack">
-            <div id="sources">
-                <h2 style="background-color: #ee999a;">Some good online resources to learn coding</h2>
-                <p>
-                    YouTube Channels : <br /><br />
-                    1) FreeCodeCamp<br />
-                    2) Programming with Mosh<br />
-                    3) Edureka<br /><br /><br />
-                    Websites : <br /><br />
-                    1) Javatpoint<br />
-                    2) W3Schools<br />
-                    3) GeeksForGeeks<br />
-                    4) Udemy<br />
-                    5) Coursera<br />
-                    6) Great Learning<br />
-                    7) Coding Ninjas
-                </p>
+        <div id="container">
+            <div class="darkBack" style="padding-top: 13vw;">
+                <video autoplay loop muted preload="none">
+                    <source src="Innovation.mp4">
+                </video>
+                <div id="letsLearn">
+                    <h2>Let's learn, build and grow together...</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus illum unde vitae tempora, quos
+                        vel
+                        veniam optio! Eum magni, natus explicabo sint quam modi mollitia accusantium impedit ea
+                        doloribus
+                        alias!
+                    </p>
+                </div>
             </div>
-        </div>
 
-        <div class="darkBack">
-            <div id="projects">
-                <h2>Here are some of my projects</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus illum unde vitae tempora, quos vel
-                    veniam optio! Eum magni, natus explicabo sint quam modi mollitia accusantium impedit ea doloribus
-                    alias!
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum ab officia facilis recusandae
-                    id cum sunt, laborum sapiente explicabo, quis commodi quae odio ducimus nemo deserunt velit
-                    laboriosam voluptatibus itaque.
-                </p>
+            <div class="lightBack">
+                <div id="sources">
+                    <h2 style="background-color: #ee999a;">Some good online resources to learn coding</h2>
+                    <p>
+                        YouTube Channels : <br /><br />
+                        1) FreeCodeCamp<br />
+                        2) Programming with Mosh<br />
+                        3) Edureka<br /><br /><br />
+                        Websites : <br /><br />
+                        1) Javatpoint<br />
+                        2) W3Schools<br />
+                        3) GeeksForGeeks<br />
+                        4) Udemy<br />
+                        5) Coursera<br />
+                        6) Great Learning<br />
+                        7) Coding Ninjas
+                    </p>
+                </div>
             </div>
-        </div>
 
-        <div class="lightBack">
-            <div id="game">
-                <h2 style="background-color: #ee999a;">Check it out : A 2D Game</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus illum unde vitae tempora, quos vel
-                    veniam optio! Eum magni, natus explicabo sint quam modi mollitia accusantium impedit ea doloribus
-                    alias!
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum ab officia facilis recusandae
-                    id cum sunt, laborum sapiente explicabo, quis commodi quae odio ducimus nemo deserunt velit
-                    laboriosam voluptatibus itaque.
-                </p>
+            <div class="darkBack">
+                <div id="projects">
+                    <h2>Here are some of my projects</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus illum unde vitae tempora, quos
+                        vel
+                        veniam optio! Eum magni, natus explicabo sint quam modi mollitia accusantium impedit ea
+                        doloribus
+                        alias!
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum ab officia facilis
+                        recusandae
+                        id cum sunt, laborum sapiente explicabo, quis commodi quae odio ducimus nemo deserunt velit
+                        laboriosam voluptatibus itaque.
+                    </p>
+                </div>
+            </div>
+
+            <div class="lightBack">
+                <div id="game">
+                    <h2 style="background-color: #ee999a;">Check it out : A 2D Game</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus illum unde vitae tempora, quos
+                        vel
+                        veniam optio! Eum magni, natus explicabo sint quam modi mollitia accusantium impedit ea
+                        doloribus
+                        alias!
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum ab officia facilis
+                        recusandae
+                        id cum sunt, laborum sapiente explicabo, quis commodi quae odio ducimus nemo deserunt velit
+                        laboriosam voluptatibus itaque.
+                    </p>
+                </div>
             </div>
         </div>
     </div>
