--- a/Student/index.html
+++ b/Student/index.html
@@ -11,11 +11,12 @@
     <div id="showNav">
         <button id="show">&#8801</button>
         <ul id="navBar">
-            <li><a href="../index.html" style="background-color : #e0b9ba;">Home</a></li>
-            <li><a href="#about" style="background-color : #e2a7a9;">About Me</a></li>
+            <li><a href="../index.html" style="background-color : #e9cdce;">Home</a></li>
+            <li><a href="#letsLearn" style="background-color : #eeb9bb;">Let Us Learn</a></li>
+            <li><a href="#sources" style="background-color : #e2a7a9;">Online Resources</a></li>
             <li><a href="#projects" style="background-color : #e39a9c;">Projects</a></li>
-            <li><a href="#skills" style="background-color : #e78a8e;">Relevant Coursework</a></li>
-            <li><a href="#resume" style="background-color : #e27478;">Resumé</a></li>
+            <li><a href="#game" style="background-color : #e78a8e;">2D Game</a></li>
+            <li><a href="#csAsOption" style="background-color : #e27478;">Computer Science As A Career Choice</a></li>
         </ul>
     </div>
 
@@ -90,6 +91,22 @@
             <div class="lightBack">
                 <div id="game">
                     <h2 style="background-color: #ee999a;">Check it out : A 2D Game</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus illum unde vitae tempora, quos
+                        vel
+                        veniam optio! Eum magni, natus explicabo sint quam modi mollitia accusantium impedit ea
+                        doloribus
+                        alias!
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum ab officia facilis
+                        recusandae
+                        id cum sunt, laborum sapiente explicabo, quis commodi quae odio ducimus nemo deserunt velit
+                        laboriosam voluptatibus itaque.
+                    </p>
+                </div>
+            </div>
+
+            <div class="darkBack">
+                <div id="csAsOption">
+                    <h2>Why I think CS is a good career option...</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus illum unde vitae tempora, quos
                         vel
                         veniam optio! Eum magni, natus explicabo sint quam modi mollitia accusantium impedit ea
