--- a/Student/index.html
+++ b/Student/index.html
@@ -12,11 +12,18 @@
         <button id="show">&#8801</button>
         <ul id="navBar">
             <li><a href="../index.html" style="background-color : #e9cdce;">Home</a></li>
-            <li><a href="#letsLearn" style="background-color : #eeb9bb;">Let Us Learn</a></li>
-            <li><a href="#sources" style="background-color : #e2a7a9;">Online Resources</a></li>
-            <li><a href="#projects" style="background-color : #e39a9c;">Projects</a></li>
-            <li><a href="#game" style="background-color : #e78a8e;">2D Game</a></li>
-            <li><a href="#csAsOption" style="background-color : #e27478;">Computer Science As A Career Choice</a></li>
+            <li><a href="#letsLearn" style="background-color : #f0bfc1;">Let Us Learn</a></li>
+            <li><a href="#sources" style="background-color : #e9b1b3;">Online Resources</a></li>
+            <li><a href="#projects" style="background-color : #e7a0a2;">Projects</a></li>
+            <li><a href="#game" style="background-color : #e58a8f;">2D Game</a></li>
+            <li><a href="#csAsOption" style="background-color : #e97d81;">Computer Science As A Career Choice</a></li>
+
+            <!-- <li><a href="../index.html" style="background-color : #fce6da;">Home</a></li>
+            <li><a href="#letsLearn" style="background-color : #fddcca;">Let Us Learn</a></li>
+            <li><a href="#sources" style="background-color : #fed3ba;">Online Resources</a></li>
+            <li><a href="#projects" style="background-color : #fec9aa;">Projects</a></li>
+            <li><a href="#game" style="background-color : #fcbb96;">2D Game</a></li>
+            <li><a href="#csAsOption" style="background-color : #f9aa7c;">Computer Science As A Career Choice</a></li> -->
         </ul>
     </div>
 
@@ -74,7 +81,7 @@
 
             <div class="darkBack">
                 <div id="projects">
-                    <h2>Here are some of my projects</h2>
+                    <h2>My projects</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus illum unde vitae tempora, quos
                         vel
                         veniam optio! Eum magni, natus explicabo sint quam modi mollitia accusantium impedit ea
