--- a/Student/index.html
+++ b/Student/index.html
@@ -44,10 +44,7 @@
         </div>
 
         <div id="container">
-            <div class="darkBack" style="padding-top: 13vw;">
-                <video autoplay loop muted preload="none">
-                    <source src="Innovation.mp4">
-                </video>
+            <div class="darkBack" style="padding-top: 10vw;">
                 <div id="letsLearn">
                     <h2>Let's learn, build and grow together...</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus illum unde vitae tempora, quos
@@ -56,10 +53,14 @@
                         doloribus
                         alias!
                     </p>
+
+                    <video autoplay loop muted preload="none">
+                        <source src="Innovation.mp4">
+                    </video>
                 </div>
             </div>
 
-            <div class="lightBack">
+            <div class="lightBack" id="sourceGrid">
                 <div id="sources">
                     <h2 style="background-color: #ee999a;">Some good online resources to learn coding</h2>
                     <p>
@@ -76,7 +77,10 @@
                         6) Great Learning<br />
                         7) Coding Ninjas
                     </p>
+
+                    <img id="wordcloud" src="wordcloud.png">
                 </div>
+                <!-- <img id="wordcloud" src="wordcloud.png"> -->
             </div>
 
             <div class="darkBack">
