--- a/Student/index.html
+++ b/Student/index.html
@@ -60,25 +60,31 @@
                 </div>
             </div>
 
-            <div class="lightBack" id="sourceGrid">
+            <div class="lightBack">
                 <div id="sources">
-                    <h2 style="background-color: #ee999a;">Some good online resources to learn coding</h2>
-                    <p>
-                        YouTube Channels : <br /><br />
-                        1) FreeCodeCamp<br />
-                        2) Programming with Mosh<br />
-                        3) Edureka<br /><br /><br />
-                        Websites : <br /><br />
-                        1) Javatpoint<br />
-                        2) W3Schools<br />
-                        3) GeeksForGeeks<br />
-                        4) Udemy<br />
-                        5) Coursera<br />
-                        6) Great Learning<br />
-                        7) Coding Ninjas
-                    </p>
-
-                    <img id="wordcloud" src="wordcloud.png">
+                    <h2 style="background-color: #ee999a;">Some good online resources to learn coding <img
+                            id="wordcloud" src="wordcloud.png"></h2>
+                    <div id="sourceInfo">
+                        <p id="sourceP1">
+                            <big>YouTube Channels : </big><br /><br />
+                            1) <i><a href="https://www.youtube.com/@freecodecamp"
+                                    target="_blank">FreeCodeCamp</a></i><br />
+                            2) <i><a href="https://www.youtube.com/c/programmingwithmosh" target="_blank">Programming
+                                    with Mosh</a></i><br />
+                            3) <i><a href="https://www.youtube.com/@edurekaIN" target="_blank">Edureka</a></i>
+                        </p>
+                        <p id="sourceP2">
+                            <big>Websites : </big><br /><br />
+                            1) <i><a href="https://www.javatpoint.com/" target="_blank">Javatpoint</a></i><br />
+                            2) <i><a href="https://www.w3schools.com/" target="_blank">W3Schools</a></i><br />
+                            3) <i><a href="https://www.geeksforgeeks.org/" target="_blank">GeeksForGeeks</a></i><br />
+                            4) <i><a href="https://www.udemy.com/" target="_blank">Udemy</a></i><br />
+                            5) <i><a href="https://www.coursera.org/" target="_blank">Coursera</a></i><br />
+                            6) <i><a href="https://www.mygreatlearning.com/" target="_blank">Great
+                                    Learning</a></i><br />
+                            7) <i><a href="https://www.codingninjas.com/" target="_blank">Coding Ninjas</a></i>
+                        </p>
+                    </div>
                 </div>
                 <!-- <img id="wordcloud" src="wordcloud.png"> -->
             </div>
