--- a/Student/index.html
+++ b/Student/index.html
@@ -62,7 +62,7 @@
 
             <div class="lightBack">
                 <div id="sources">
-                    <h2 style="background-color: #ee999a;">Some good online resources to learn coding <img
+                    <h2 style="background-color: #ee999a;">Some good online resources to learn coding<br /><img
                             id="wordcloud" src="wordcloud.png"></h2>
                     <div id="sourceInfo">
                         <p id="sourceP1">
@@ -73,6 +73,7 @@
                                     with Mosh</a></i><br />
                             3) <i><a href="https://www.youtube.com/@edurekaIN" target="_blank">Edureka</a></i>
                         </p>
+                        <hr id="hr"/>
                         <p id="sourceP2">
                             <big>Websites : </big><br /><br />
                             1) <i><a href="https://www.javatpoint.com/" target="_blank">Javatpoint</a></i><br />
