--- a/Student/index.html
+++ b/Student/index.html
@@ -47,16 +47,29 @@
             <div class="darkBack" style="padding-top: 10vw;">
                 <div id="letsLearn">
                     <h2>Let's learn, build and grow together...</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus illum unde vitae tempora, quos
-                        vel
-                        veniam optio! Eum magni, natus explicabo sint quam modi mollitia accusantium impedit ea
-                        doloribus
-                        alias!
+                    <p>
+                        Have interesting ideas 💡?
+                        <br />Or just want to learn some new stuff 💻?
+                        <br />I do too!<br /><br />
+                        Let us explore the field of Computer Science together and work on new and exciting hobby
+                        projects...<br />
                     </p>
 
-                    <video autoplay loop muted preload="none">
-                        <source src="Innovation.mp4">
-                    </video>
+                    <div id="contact">
+                        <p style="grid-area: dropEmail; padding: 0;">Drop me an email 📧 : </p><button id="gmail"
+                            style="background-image: url('../Recruiter/gmail.png'); background-size: cover; grid-area: gmail;"
+                            title="Send me an email"></button>
+                        <p style="grid-area: connect; padding: 0.1vw 0vw 3vw 0vw;">Let's connect 🔗 : </p><button
+                            id="linkedIn"
+                            style="background-image: url('../Recruiter/linkedIn.png'); background-size: cover; grid-area: LI;"
+                            title="Go to my LinkedIn profile"></button>
+                    </div>
+
+                    <div id="videoBack">
+                        <video autoplay loop muted preload="none" type="video/mp4">
+                            <source src="Innovation.mp4">
+                        </video>
+                    </div>
                 </div>
             </div>
 
@@ -73,7 +86,7 @@
                                     with Mosh</a></i><br />
                             3) <i><a href="https://www.youtube.com/@edurekaIN" target="_blank">Edureka</a></i>
                         </p>
-                        <hr id="hr"/>
+                        <hr id="hr" />
                         <p id="sourceP2">
                             <big>Websites : </big><br /><br />
                             1) <i><a href="https://www.javatpoint.com/" target="_blank">Javatpoint</a></i><br />
@@ -87,7 +100,6 @@
                         </p>
                     </div>
                 </div>
-                <!-- <img id="wordcloud" src="wordcloud.png"> -->
             </div>
 
             <div class="darkBack">
