--- a/Recruiter/Image_sources/index.html
+++ b/Recruiter/Image_sources/index.html
@@ -29,6 +29,9 @@
         <h3 style="grid-area: link6;">
             https://www.google.com/url?sa=i&url=https%3A%2F%2Fin.pinterest.com%2Fpin%2F675610381577683403%2F&psig=AOvVaw1lyGcdL3Lnxz-Y6Y3fGtGz&ust=1717777060566000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCJiy862wx4YDFQAAAAAdAAAAABAE
         </h3>
+        <p style="width: 100vw; text-align: center; margin: 3vw 0vw;">
+            <mark>All the animations and remaining images : Self-made</mark>
+        </p>
     </div>
 
     <button onclick="back()">Back</button>
