--- a/Student/index.html
+++ b/Student/index.html
@@ -49,7 +49,7 @@
                     <h2>Let's learn, build and grow together...</h2>
                     <p>
                         Have interesting ideas 💡?
-                        <br />Or just want to learn some new stuff 💻?
+                        <br />Or just want to learn some new stuff?
                         <br />I do too!<br /><br />
                         Let us explore the field of Computer Science together and work on new and exciting hobby
                         projects...<br />
