--- a/Student/index.html
+++ b/Student/index.html
@@ -105,15 +105,14 @@
             <div class="darkBack">
                 <div id="projects">
                     <h2>My projects</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus illum unde vitae tempora, quos
-                        vel
-                        veniam optio! Eum magni, natus explicabo sint quam modi mollitia accusantium impedit ea
-                        doloribus
-                        alias!
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum ab officia facilis
-                        recusandae
-                        id cum sunt, laborum sapiente explicabo, quis commodi quae odio ducimus nemo deserunt velit
-                        laboriosam voluptatibus itaque.
+                    <p>
+                        <big>Here are some of my projects : </big><br />
+                        1) <a href="../Recruiter/index.html#p1"><i>Android Studio : Tic Tac Toe</i></a><br />
+                        2) <a href="../Recruiter/index.html#projects"><i>Android Studio : Unit Converter</i></a><br />
+                        3) <a href="../Recruiter/index.html#projects"><i>Website : Leisure ActiviTEAs (...tea for the
+                                brain)</i></a><br />
+                        4) <a href="../index.html"><i>Portfolio Website</i></a><br />
+                        5) <a href="../Recruiter/index.html#projects2"><i>2D Game : Using HTML Canvas</i></a><br />
                     </p>
                 </div>
             </div>
