--- a/Student/index.html
+++ b/Student/index.html
@@ -84,7 +84,8 @@
                                     target="_blank">FreeCodeCamp</a></i><br />
                             2) <i><a href="https://www.youtube.com/c/programmingwithmosh" target="_blank">Programming
                                     with Mosh</a></i><br />
-                            3) <i><a href="https://www.youtube.com/@edurekaIN" target="_blank">Edureka</a></i>
+                            3) <i><a href="https://www.youtube.com/@edurekaIN" target="_blank">Edureka</a></i><br />
+                            4) <i><a href="https://www.youtube.com/user/Simplilearn" target="_blank">Simplilearn</a></i>
                         </p>
                         <hr id="hr" />
                         <p id="sourceP2">
@@ -106,14 +107,20 @@
                 <div id="projects">
                     <h2>My projects</h2>
                     <p>
-                        <big>Here are some of my projects : </big><br />
-                        1) <a href="../Recruiter/index.html#p1"><i>Android Studio : Tic Tac Toe</i></a><br />
-                        2) <a href="../Recruiter/index.html#projects"><i>Android Studio : Unit Converter</i></a><br />
-                        3) <a href="../Recruiter/index.html#projects"><i>Website : Leisure ActiviTEAs (...tea for the
+                        <big>Here are some of my projects : </big><br /><br />
+                        1) <a href="../Recruiter/index.html#p1" id="tictactoeLink"><i>Android Studio : Tic Tac Toe</i></a><br />
+                        2) <a href="../Recruiter/index.html#projects" id="unitConverterLink"><i>Android Studio : Unit Converter</i></a><br />
+                        3) <a href="../Recruiter/index.html#projects" id="leisureLink"><i>Website : Leisure ActiviTEAs (...tea for the
                                 brain)</i></a><br />
-                        4) <a href="../index.html"><i>Portfolio Website</i></a><br />
-                        5) <a href="../Recruiter/index.html#projects2"><i>2D Game : Using HTML Canvas</i></a><br />
+                        4) <a href="../index.html" id="portfolioLink"><i>Portfolio Website</i></a><br />
+                        5) <a href="../Recruiter/index.html#projects2" id="toGameLink"><i>2D Game : Using HTML Canvas</i></a><br />
                     </p>
+
+                    <img id="toGame" src="ProjectImages/toGameBack.png" style="grid-area: toGame;">
+                    <img id="tictactoe" src="ProjectImages/TicTacToe.jpg" style="grid-area: tictactoe;">
+                    <img id="portfolio" src="ProjectImages/portfolioBtnBack.png" style="grid-area: portfolio;">
+                    <img id="unitConverter" src="ProjectImages/converterBack.jpg" style="grid-area: unitConverter;">
+                    <img id="leisure" src="ProjectImages/LeisureActiviteas.png" style="grid-area: leisure;">
                 </div>
             </div>
 
