--- a/Student/index.html
+++ b/Student/index.html
@@ -108,12 +108,16 @@
                     <h2>My projects</h2>
                     <p>
                         <big>Here are some of my projects : </big><br /><br />
-                        1) <a href="../Recruiter/index.html#p1" id="tictactoeLink"><i>Android Studio : Tic Tac Toe</i></a><br />
-                        2) <a href="../Recruiter/index.html#projects" id="unitConverterLink"><i>Android Studio : Unit Converter</i></a><br />
-                        3) <a href="../Recruiter/index.html#projects" id="leisureLink"><i>Website : Leisure ActiviTEAs (...tea for the
+                        1) <a href="../Recruiter/index.html#p1" id="tictactoeLink"><i>Android Studio : Tic Tac
+                                Toe</i></a><br />
+                        2) <a href="../Recruiter/index.html#projects" id="unitConverterLink"><i>Android Studio : Unit
+                                Converter</i></a><br />
+                        3) <a href="../Recruiter/index.html#projects" id="leisureLink"><i>Website : Leisure ActiviTEAs
+                                (...tea for the
                                 brain)</i></a><br />
-                        4) <a href="../index.html" id="portfolioLink"><i>Portfolio Website</i></a><br />
-                        5) <a href="../Recruiter/index.html#projects2" id="toGameLink"><i>2D Game : Using HTML Canvas</i></a><br />
+                        4) <a href="../index.html" id="portfolioLink"><i>Website : Portfolio Website</i></a><br />
+                        5) <a href="../Recruiter/index.html#projects2" id="toGameLink"><i>2D Game : Using HTML
+                                Canvas</i></a><br />
                     </p>
 
                     <img id="toGame" src="ProjectImages/toGameBack.png" style="grid-area: toGame;">
