--- a/Student/index.html
+++ b/Student/index.html
@@ -125,6 +125,7 @@
                     <img id="portfolio" src="ProjectImages/portfolioBtnBack.png" style="grid-area: portfolio;">
                     <img id="unitConverter" src="ProjectImages/converterBack.jpg" style="grid-area: unitConverter;">
                     <img id="leisure" src="ProjectImages/LeisureActiviteas.png" style="grid-area: leisure;">
+
                 </div>
             </div>
 
@@ -174,6 +175,11 @@
             window.location.href = "../";
         }
     </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+
     <script src="stuJS.js"></script>
 </body>
 
