--- a/Game/Game.html
+++ b/Game/Game.html
@@ -64,8 +64,7 @@
         function backToPortfolio() {
             $(document).ready(function () {
                 setInterval(function () {
-                    window.location = "../Recruiter/";
-                    // history.go(-1);
+                    history.go(-1);
                 }, 300);
                 $('body').addClass('transitionOut');
             });
