--- a/Game/instructions.html
+++ b/Game/instructions.html
@@ -27,7 +27,7 @@
 
     <script>
         function back() {
-            window.location = "Game.html";
+            history.go(-1);
         }
     </script>
 </body>
