--- a/Student/index.html
+++ b/Student/index.html
@@ -64,7 +64,7 @@
                     <div id="contact">
                         <p style="grid-area: dropEmail; padding: 0;">Drop me an email 📧 : </p><button id="gmail"
                             style="background-image: url('../Recruiter/gmail.png'); background-size: cover; grid-area: gmail;"
-                            title="Send me an email"></button>
+                            title="Show email ID"></button>
                         <p style="grid-area: emailID;" id="emailID">sanjanajoshi2023@gmail.com</p>
                         <p style="grid-area: connect; padding: 0.1vw 0vw 3vw 0vw;">Let's connect 🔗 : </p><button
                             id="linkedIn"
@@ -150,15 +150,17 @@
             <div class="darkBack">
                 <div id="csAsOption">
                     <h2>Why I think CS is a good career option...</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus illum unde vitae tempora, quos
-                        vel
-                        veniam optio! Eum magni, natus explicabo sint quam modi mollitia accusantium impedit ea
-                        doloribus
-                        alias!
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum ab officia facilis
-                        recusandae
-                        id cum sunt, laborum sapiente explicabo, quis commodi quae odio ducimus nemo deserunt velit
-                        laboriosam voluptatibus itaque.
+                    <img src="csAsChoice.jpg"
+                        style="max-width : 30vw; position : relative; left : 50%; transform : translate(-50%,10%);border: 0.1vw solid black;">
+                    <p>
+                        I think it's an all in one package (not salary wise), where you can put your creative as well as
+                        logical skills to good use. The range of things that one can do in this field is quite vast,
+                        like developing applications, building websites, interpreting complex data using various models,
+                        and many more things. The part which I think is the best is that one can learn almost everything
+                        on their own and get better with a lot of practice. So if you're confused whether or not to get
+                        into this field, I would strongly suggest you do. And if you have anything tech related to talk
+                        about, feel free to <a href="#contact">contact me</a>.<br /><br />
+                        Happy coding! 💻
                     </p>
                 </div>
             </div>
