--- a/Student/index.html
+++ b/Student/index.html
@@ -150,8 +150,7 @@
             <div class="darkBack">
                 <div id="csAsOption">
                     <h2>Why I think CS is a good career option...</h2>
-                    <img src="csAsChoice.jpg"
-                        style="max-width : 30vw; position : relative; left : 50%; transform : translate(-50%,10%);border: 0.1vw solid black;">
+                    <img id="csAsChoice" src="csAsChoice.jpg">
                     <p>
                         I think it's an all in one package (not salary wise), where you can put your creative as well as
                         logical skills to good use. The range of things that one can do in this field is quite vast,
