--- a/Student/index.html
+++ b/Student/index.html
@@ -158,7 +158,7 @@
                         and many more things. The part which I think is the best is that one can learn almost everything
                         on their own and get better with a lot of practice. So if you're confused whether or not to get
                         into this field, I would strongly suggest you do. And if you have anything tech related to talk
-                        about, feel free to <a href="#contact">contact me</a>.<br /><br />
+                        about, feel free to <a href="#letsLearn">contact me</a>.<br /><br />
                         Happy coding! 💻
                     </p>
                 </div>
